# Epitech

./: README.md
203hotline_2017/: 203hotline
207demography_2017/: 207demography
302separation/: 302separation
CPE_2016_getnextline/: #get_next_line.c  get_next_line.c  get_next_line.h
CPP_babel_2018/: CMakeLists.txt  Graph-Uml3.odt  conanfile.txt
CPP_babel_2018/client/include/: mainwindow.h  opus.hpp  port_audio.hpp  protocol.hpp  tcpNetwork.hpp  udpNetwork.hpp
CPP_babel_2018/client/src/: Babel.pro  main.cpp  mainwindow.cpp  mainwindow.ui  opus.cpp  port_audio.cpp  protocol.cpp  tcpNetwork.cpp  udpNetwork.cpp
CPP_babel_2018/server/include/: commande.hpp  connection.hpp  contacts.hpp  instruction.hpp  server.hpp  session.hpp
CPP_babel_2018/server/src/: commande.cpp  connection.cpp  contacts.cpp  instruction.cpp  main.cpp  server.cpp  session.cpp
DEV_dashboard_2018/: app.js  docker-compose.yml  helpers.js  models.js  okta.js  package-lock.json  package.json
DEV_dashboard_2018/public/: about.json
DEV_dashboard_2018/routes/: dashboard.js  register.js  reset-password.js  weather.js
DEV_dashboard_2018/views/: dashboard.hbs  index.hbs
Gomoku_deep_q_learning/: ReadMe
Gomoku_deep_q_learning/save/: ReadMe  (+2 more)
PSU_2017_malloc/: Makefile
PSU_myirc_2017/: Makefile  client  server
PSU_philosopher_2017/: Makefile
PSU_zappy_2017/: Makefile  zappy_ai  zappy_server
cpp_arcade/: Makefile  command  libmaman.hpp  main.cpp  map
cpp_plazza/: Makefile  log.txt  plazza  test
gomoku/: ai.py  calcpoids.py  compile.py
neutinos/: 206neutrinos  206neutrinos~
trade_2017/: Makefile
(+110 files in other folders)
